[2025-06-30 11:46:56] v0_04_01_31: Added example of usage of Models via Things container
[2025-06-30 11:20:05] v0_04_01_30: Added GetModel function to Things
[2025-06-30 11:19:10] v0_04_01_29: Added load and get functions for models in Thing
[2025-06-30 10:55:27] v0_04_01_28: Changed initialization of m_VAO in Model class
[2025-06-30 10:52:08] v0_04_01_27: Added m_model container to Things
[2025-06-30 10:47:28] v0_04_01_26: Fixed upper case mistake on m_shaders and m_textures at Things
[2025-06-30 10:46:36] v0_04_01_25: Added basic get and load functions for models on Things
[2025-06-30 10:45:20] v0_04_01_24: Adding Models to Things class
[2025-06-30 10:20:26] v0_04_01_23: Fixed changelog auto versioning
[2025-06-30 09:24:39] v0_04_01_22: Changed project folder path
[2025-06-28 10:38:31] v0_04_01_21: Given up on shader error handling
[2025-06-28 10:37:49] v0_04_01_20: Another try at Shader compilation error handling
[2025-06-28 10:33:41] v0_04_01_19: Testing Try Catch on shader class compilation process
[2025-06-28 10:27:18] v0_04_01_18: Test: Setting Uniforms on a uncompiled shader program
[2025-06-28 10:23:22] v0_04_01_17: Added Runtime Guard-rail for undefined shader compilation
[2025-06-28 09:42:03] v0_04_01_16: Testing Shader Behaviour
[2025-06-28 09:13:40] v0_04_01_15: Removed Freetype outdated DLL from root project
[2025-06-26 13:52:39] v0_04_01_14: Finished skeleton of Model, Entity and Mesh classes (The renderer Draws)
[2025-06-22 12:22:31] v0_04_01_13: Separation of concerns: Who draws? -> Entity; How to draw? -> Model;
[2025-06-22 11:33:40] v0_04_01_12: Finished first version of Entity class
[2025-06-22 10:19:14] v0_04_01_11: Moved VAOs to Entity class
[2025-06-20 13:10:46] v0_04_01_10: First draft of simplified Mesh Class
[2025-06-20 09:50:43] v0_04_01_09: Completely removed 3D classes (mesh / ObjLoader)
[2025-06-20 08:28:17] v0_04_01_08: Converted Assimp loader to Obj loader